# quarto4sbp

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  GEMINI.md  README.md  install.py  pyproject.toml
.beads/: issues.jsonl
.github/: copilot-instructions.md
.github/workflows/: main-ci.yml  pr-ci.yml
docs/examples/caseum/: introduction.docx  introduction.qmd
docs/spec/: 000-shared-patterns.md  001-spec-based-development.md  002-q4s-cli-tool.md  003-github-actions-ci.md  004-install-script.md  005-new-command.md  006-pdf-command.md  007-word-support.md  008-unified-new-command.md  009-double-extension-pdf-naming.md  009-llm-integration.md  010-llm-testing.md  011-configuration-system.md  012-tone-of-voice.md
examples/caseum/: introduction.docx  introduction.qmd  render.sh
prompts/: README.md
prompts/common/: format-json.txt
prompts/tov/: rewrite-slide.txt  system.txt
prompts/viz/: analyze-slide.txt  generate-image.txt
quarto4sbp/: cli.py
quarto4sbp/commands/: __init__.py  echo.py  help.py  llm.py  new.py  new_doc.py  new_docx.py  new_pptx.py  pdf.py  pdf_doc.py  pdf_docx.py  pdf_pptx.py  tov.py
quarto4sbp/llm/: __init__.py  client.py  config.py  plugin.py  prompts.py
quarto4sbp/tov/: __init__.py  parser.py  rewriter.py  updater.py
quarto4sbp/utils/: config.py  pdf_export.py
templates/: render.sh.template  simple-document.docx  simple-document.qmd  simple-presentation.pptx  simple-presentation.qmd
tests/: conftest.py  test_cli.py  test_install.py  test_llm_examples.py  test_llm_fixtures.py  test_llm_pytest_fixtures.py  test_mock_llm_client.py
tests/commands/: __init__.py  test_echo.py  test_help.py  test_llm.py  test_new.py  test_new_doc.py  test_new_docx.py  test_new_pptx.py  test_pdf.py  test_pdf_doc.py  test_pdf_docx.py  test_pdf_integration.py  test_pdf_pptx.py  test_pdf_pptx_integration.py  test_tov.py
tests/fixtures/llm/common/: hello.txt
tests/fixtures/llm/tov/: rewrite-casual.txt  rewrite-formal.txt
tests/fixtures/llm/viz/: analyze-slide.json  generate-prompt.txt
tests/helpers/: __init__.py  llm.py
tests/llm/: __init__.py  test_client.py  test_config.py  test_prompts.py
tests/mocks/: __init__.py  llm_client.py
tests/tov/: test_parser.py  test_rewriter.py  test_updater.py
tests/utils/: test_config.py
