[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quarto4sbp"
version = "0.1.0"
description = "Tool for working with quarto in Schuberg Philis."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llm>=0.15",
]
authors = [
    { name = "lsimons" }
]

[project.scripts]
q4s = "quarto4sbp.cli:main"

[tool.setuptools.packages.find]
include = ["quarto4sbp*"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.0",
    "pytest-cov>=7.0.0",
]
