[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "quarto4sbp"
version = "0.1.0"
description = "Tool for working with quarto in Schuberg Philis."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llm>=0.15",
    "lsimons-llm @ git+https://github.com/lsimons-bot/lsimons-llm.git",
]
authors = [
    { name = "lsimons" }
]

[project.scripts]
q4s = "quarto4sbp.cli:main"

[tool.setuptools.packages.find]
include = ["quarto4sbp*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=quarto4sbp --cov-report=term-missing --cov-fail-under=80"
